[gd_scene load_steps=3 format=3 uid="uid://buutl05rvbhox"]

[ext_resource type="Script" path="res://modals/tab_modal/tab_modal.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b5frslx0xhpxc" path="res://modals/modal/modal.tscn" id="1_mfp75"]

[node name="TabModal" instance=ExtResource("1_mfp75")]
script = ExtResource("1")
current_tab = 0

[node name="TabBar" type="TabBar" parent="." index="2"]
offset_right = 848.0
offset_bottom = 31.0
focus_mode = 0
tab_alignment = 1

[node name="TabBarBackground" type="Control" parent="TabBar" index="0"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="tab_changed" from="TabBar" to="." method="set_current_tab"]
[connection signal="draw" from="TabBar/TabBarBackground" to="." method="_on_tab_bar_background_draw"]
